# mkspy

./: COPYING  Cargo.toml
src/: main.rs
